// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Primes /> should add a prime 1`] = `
.c4 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:focus,
.c4:hover,
.c4:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.25rem;
}

.c2 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: 10em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 1.25rem;
}

.c3 {
  color: #adb9c9;
  position: absolute;
  right: 0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c6 {
  margin: 1.25rem 0;
}

<div>
  <p>
    Primes annuelles ou exceptionnelles perçues au cours des 3 derniers mois
  </p>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        name="primes[0].prime"
        size="10"
        value=""
      />
      <span
        aria-hidden="true"
        class="c3"
      >
        €
      </span>
    </div>
    <button
      class="c4 c5"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c4 c6"
    type="button"
  >
    Ajouter une prime
  </button>
</div>
`;

exports[`<Primes /> should delete a primes 1`] = `
.c0 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus,
.c0:hover,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 {
  margin: 1.25rem 0;
}

<div>
  <p>
    Primes annuelles ou exceptionnelles perçues au cours des 3 derniers mois
  </p>
  <button
    class="c0 c1"
    type="button"
  >
    Ajouter une prime
  </button>
</div>
`;

exports[`<Primes /> should render 1`] = `
.c4 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 0;
  vertical-align: initial;
  text-align: left;
  line-height: initial;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  background: none;
  border: none;
  border-radius: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:focus,
.c4:hover,
.c4:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.25rem;
}

.c2 {
  padding: 0;
  font-size: 1rem;
  text-align: left;
  line-height: inherit;
  width: 10em;
  border-radius: 0.25rem;
  border: 1px solid #c9d3df;
  padding: 0.625rem 0.25rem;
  border-color: #c9d3df;
  text-align: right;
  padding-right: 1rem;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c1 {
  display: inline-block;
  position: relative;
  margin-right: 1.25rem;
}

.c3 {
  color: #adb9c9;
  position: absolute;
  right: 0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  margin-left: 1.25rem;
  font-size: 0.875rem;
}

.c6 {
  margin: 1.25rem 0;
}

<div>
  <p>
    Primes annuelles ou exceptionnelles perçues au cours des 3 derniers mois
  </p>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        name="primes[0].prime"
        size="10"
        value="300"
      />
      <span
        aria-hidden="true"
        class="c3"
      >
        €
      </span>
    </div>
    <button
      class="c4 c5"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c4 c6"
    type="button"
  >
    Ajouter une prime
  </button>
</div>
`;
